-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
6.x
-
None
-
linux (fedora)
Designer crashes when closing the form. Call stack:
1 raise 0x7ffff47f79d5
2 abort 0x7ffff47e08a4
3 qt_message_fatal qlogging.cpp 1892 0x7ffff4db2361
4 QMessageLogger::fatal qlogging.cpp 890 0x7ffff4dae624
5 qt_assert qglobal.cpp 3119 0x7ffff4da4314
6 qt_qFindChild_helper qobject.cpp 2006 0x7ffff51c5072
7 QObject::findChild<qdesigner_internal::SignalSlotEditor *> qobject.h 164 0x7ffff77fd62f
8 qdesigner_internal::SignalSlotEditorWindow::setActiveFormWindow signalsloteditorwindow.cpp 746 0x7ffff77fb6e7
9 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<QDesignerFormWindowInterface *>, void, void (qdesigner_internal::SignalSlotEditorWindow:: *)(QDesignerFormWindowInterface *)>::call qobjectdefs_impl.h 152 0x7ffff77fec4b
10 QtPrivate::FunctionPointer<void (qdesigner_internal::SignalSlotEditorWindow:: *)(QDesignerFormWindowInterface *)>::call<QtPrivate::List<QDesignerFormWindowInterface *>, void> qobjectdefs_impl.h 185 0x7ffff77fe8be
11 QtPrivate::QSlotObject<void (qdesigner_internal::SignalSlotEditorWindow:: *)(QDesignerFormWindowInterface *), QtPrivate::List<QDesignerFormWindowInterface *>, void>::impl qobjectdefs_impl.h 395 0x7ffff77fe44b
12 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 375 0x7ffff4e984ff
13 doActivate<false> qobject.cpp 3825 0x7ffff51d1142
14 QMetaObject::activate qobject.cpp 3885 0x7ffff51caf21
15 QDesignerFormWindowManagerInterface::activeFormWindowChanged moc_abstractformwindowmanager.cpp 333 0x7ffff6ecc3c7
16 qdesigner_internal::FormWindowManager::setActiveFormWindow formwindowmanager.cpp 329 0x7ffff76a058e
17 qdesigner_internal::FormWindowManager::removeFormWindow formwindowmanager.cpp 297 0x7ffff76a0441
18 qdesigner_internal::FormWindow::~FormWindow formwindow.cpp 323 0x7ffff767acef
19 qdesigner_internal::FormWindow::~FormWindow formwindow.cpp 339 0x7ffff767afd4
20 QObjectPrivate::deleteChildren qobject.cpp 2047 0x7ffff51c533e
21 QWidget::~QWidget qwidget.cpp 1517 0x7ffff63d9cb8
22 QDesignerFormWindow::~QDesignerFormWindow qdesigner_formwindow.cpp 86 0x4a2a66
23 QDesignerFormWindow::~QDesignerFormWindow qdesigner_formwindow.cpp 90 0x4a2a8a
24 QObjectPrivate::deleteChildren qobject.cpp 2047 0x7ffff51c533e
25 QWidget::~QWidget qwidget.cpp 1517 0x7ffff63d9cb8
26 QMdiSubWindow::~QMdiSubWindow qmdisubwindow.cpp 2256 0x7ffff65fadda
27 QMdiSubWindow::~QMdiSubWindow qmdisubwindow.cpp 2263 0x7ffff65fadfc
28 qDeleteInEventHandler qobject.cpp 4691 0x7ffff51cc6c9
29 QObject::event qobject.cpp 1293 0x7ffff51c3ba5
30 QWidget::event qwidget.cpp 9061 0x7ffff63f0225
31 QMdiSubWindow::event qmdisubwindow.cpp 2891 0x7ffff65fd2ee
32 QApplicationPrivate::notify_helper qapplication.cpp 3396 0x7ffff63747ba
33 QApplication::notify qapplication.cpp 3346 0x7ffff63745c2
34 QCoreApplication::notifyInternal2 qcoreapplication.cpp 1040 0x7ffff4e7c4c4
35 QCoreApplication::sendEvent qcoreapplication.cpp 1442 0x7ffff4e7ce70
36 QCoreApplicationPrivate::sendPostedEvents qcoreapplication.cpp 1801 0x7ffff4e7db92
37 QCoreApplication::sendPostedEvents qcoreapplication.cpp 1660 0x7ffff4e7d4ea
38 postEventSourceDispatch qeventdispatcher_glib.cpp 277 0x7ffff5191aa0
39 g_main_context_dispatch 0x7ffff43db96f
40 g_main_context_iterate.constprop 0x7ffff442d758
41 g_main_context_iteration 0x7ffff43d8d43
42 QEventDispatcherGlib::processEvents qeventdispatcher_glib.cpp 427 0x7ffff51922f8
43 QXcbGlibEventDispatcher::processEvents qxcbeventdispatcher.cpp 132 0x7fffe3fd0f06
44 QEventLoop::processEvents qeventloop.cpp 139 0x7ffff4e8d623
45 QEventLoop::exec qeventloop.cpp 232 0x7ffff4e8d954
46 QCoreApplication::exec qcoreapplication.cpp 1355 0x7ffff4e7ccb2
47 QGuiApplication::exec qguiapplication.cpp 1874 0x7ffff575eab2
48 QApplication::exec qapplication.cpp 2610 0x7ffff637183f
49 main main.cpp 55 0x4800c9
| For Gerrit Dashboard: QTBUG-89926 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 329355,2 | Qt Designer: Fix potential crashes when using findChild<> | 6.0 | qt/qttools | Status: MERGED | +2 | 0 |
| 329359,2 | Don't call a method on potential nullptr | 6.0 | qt/qttools | Status: MERGED | +2 | 0 |
| 329372,1 | Designer: Fix a crash when closing a form | dev | qt/qttools | Status: ABANDONED | 0 | 0 |
| 329385,4 | Qt Designer: Fix potential crashes when using findChild<> | dev | qt/qttools | Status: MERGED | +2 | 0 |
| 329392,2 | Don't call a method on potential nullptr | dev | qt/qttools | Status: MERGED | +2 | 0 |