Qt Designer: Fix potential crashes when using findChild<>

Extends 3f600283ecc9cfcfc65eabd305ad36fbce55dbce.

Pick-to: 6.0
Task-number: QTBUG-89926
Change-Id: Iac2adc26dff190380c4c8cf5610ebc0132efde2d
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>